Page produit : affichage des données du produit (paramètres de requête de l'URL)

--- a/pages/products.html
+++ b/pages/products.html
@@ -32,14 +32,14 @@
                 <div>
                     <img class="product__img" id="product__img">
                 </div>
-                <div>
+                <div class="product__container">
                     <div class="product__details">
                         <div class="product-top">
                             <h2 id="product__name" class="product__name bold">Name</h2>
                             <p id="product__price" class="bold">Price</p>
                         </div>
                         <p id="product__id">Id</p>
-                        <p id="product__description">Description</p>
+                        <p id="product__description" class="product__description">Description</p>
                     </div>
                     <div class="purchase__options">
                         <label id="product__option">
