Page produit : ajout options de personnalisation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            <!-- Produits disponibles présentés sous forme de cartes cliquables -->
            <h1>Orinoco, e-commerce spécialisé</h1>
            <section class="products">
-               <h2>Découvrez notre gamme Oricamera d'appareils photo vintage.</h2>
+               <h2 class="section__title">Découvrez notre gamme Oricamera d'appareils photo vintage.</h2>
                <div id="productList" class="products-list">
                    <template id="templateProduct">
                        <a id="card__link">
