--- a/pages/products.html
+++ b/pages/products.html
@@ -41,27 +41,34 @@
                         <p id="product__id">Id</p>
                         <p id="product__description" class="product__description">Description</p>
                     </div>
-                    <div class="purchase__options">
-                        <label id="product__option">
-                            <select id="product__option--selector">
-                                <option></option>
-                                <option></option>
-                            </select>
-                        </label>
-                        <label id="product__quantity">
-                            <select id="product__quantity--selector">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                            </select>
-                        </label>
+                    <div class="purchase__product--options">
+                        <div class="purchase__options">
+                            <p>Options</p>
+                            <label id="product__option">
+                                <select id="product__option--selector">
+                                    <option id="product__option--one">Option 1</option>
+                                    <option id="product__option--two">Option 2</option>
+                                    <option id="product__option--three">Option 3</option>
+                                </select>
+                            </label>
+                        </div>
+                        <div class="purchase__options">
+                            <p>Quantité</p>
+                            <label id="product__quantity">
+                                <select id="product__quantity--selector">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </label>
+                        </div> 
                     </div>
                 </div>
             </section>
