Page produit : Ajout bouton

--- a/pages/products.html
+++ b/pages/products.html
@@ -46,9 +46,9 @@
                             <p>Options</p>
                             <label id="product__option">
                                 <select id="product__option--selector">
-                                    <option id="product__option--one">Option 1</option>
-                                    <option id="product__option--two">Option 2</option>
-                                    <option id="product__option--three">Option 3</option>
+                                    <option id="product__option--one"></option>
+                                    <option id="product__option--two"></option>
+                                    <option id="product__option--three"></option>
                                 </select>
                             </label>
                         </div>
@@ -69,6 +69,9 @@
                                 </select>
                             </label>
                         </div> 
+                    </div>
+                    <div class="product__add-to-cart">
+                        <button class="product__button bold">Ajouter au panier</button>
                     </div>
                 </div>
             </section>
