Page produit : correction de l'affichage des options de personnalisation avec JS

--- a/pages/products.html
+++ b/pages/products.html
@@ -28,7 +28,7 @@
         </header>
         <main class="main-product container" id="main-product">
             <h1 class="product__title" id="product__title">Titre</h1>
-            <section class="product-section">
+            <section class="product-section" id="product-section">
                 <div>
                     <img class="product__img" id="product__img">
                 </div>
@@ -46,9 +46,6 @@
                             <p>Options</p>
                             <label id="product__option">
                                 <select id="product__option--selector">
-                                    <option id="product__option--one"></option>
-                                    <option id="product__option--two"></option>
-                                    <option id="product__option--three"></option>
                                 </select>
                             </label>
                         </div>
