--- a/pages/products.html
+++ b/pages/products.html
@@ -43,14 +43,14 @@
                     </div>
                     <div class="purchase__product--options">
                         <div class="purchase__options">
-                            <p>Options</p>
+                            <p class="bold">Options</p>
                             <label id="product__option">
                                 <select id="product__option--selector">
                                 </select>
                             </label>
                         </div>
                         <div class="purchase__options">
-                            <p>Quantité</p>
+                            <p class="bold">Quantité</p>
                             <label id="product__quantity">
                                 <select id="product__quantity--selector">
                                     <option value="1">1</option>
@@ -68,7 +68,7 @@
                         </div> 
                     </div>
                     <div class="product__add-to-cart">
-                        <button class="product__button bold">Ajouter au panier</button>
+                        <button id="btn_addToCart" class="product__button bold">Ajouter au panier</button>
                     </div>
                 </div>
             </section>
