Page produit : calcul, affichage et sauvegarde du nouveau prix en fonction de la quantité sélectionnée

--- a/pages/products.html
+++ b/pages/products.html
@@ -54,6 +54,8 @@
                             <label id="product__quantity">
                             </label>
                         </div> 
+                        <div id="new__price">
+                        </div>
                     </div>
                     <div class="product__add-to-cart">
                         <button id="btn_addToCart" class="product__button bold">Ajouter au panier</button>
