--- a/pages/products.html
+++ b/pages/products.html
@@ -62,6 +62,20 @@
                     </div>
                 </div>
             </section>
+            <div class="popupContainer" id="popupContainer">
+                <div class="popup" id="popup">
+                    <p class="popup__title bold">Le produit a bien été ajouté au panier !</p>
+                    <div class="popup__cta">
+                        <a href="cart.html">
+                            <button class="popup__btn bold">Voir mon panier</button>
+                        </a>
+                        <a href="../index.html">
+                            <button class="popup__btn bold">Continuez mes achats</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
         </main>
         <footer>
             <!-- Footer identique sur toutes les pages : A propos, contact et 
