Page panier : affichage des produits ajoutés au panier/localStorage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 </div>
                 <img class="logo" src="images/logo-orinoco.jpg" alt="Logo de la marque Orinoco"/>
                 <div class="shopping-cart">
-                   <i class="cart-icon fas fa-shopping-cart"></i>
+                   <a href="pages/cart.html">
+                     <i class="cart-icon fas fa-shopping-cart"></i>
+                   </a>
                 </div>
             </div>
        </header>
