--- a/pages/products.html
+++ b/pages/products.html
@@ -22,7 +22,9 @@
                  </div>
                  <img class="logo" src="../images/logo-orinoco.jpg" alt="Logo de la marque Orinoco"/>
                  <div class="shopping-cart">
-                    <i class="cart-icon fas fa-shopping-cart"></i>
+                    <a href="cart.html">
+                        <i class="cart-icon fas fa-shopping-cart"></i>
+                    </a>
                  </div>
              </div>
         </header>
@@ -64,6 +66,7 @@
             </section>
             <div class="popupContainer" id="popupContainer">
                 <div class="popup" id="popup">
+                    <i class="fas fa-times closePopup_icone" id="closePopup_icone"></i>
                     <p class="popup__title bold">Le produit a bien été ajouté au panier !</p>
                     <div class="popup__cta">
                         <a href="cart.html">
