Page panier : amélioration de l'affichage des produits

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -30,7 +30,7 @@
         </header>
         <main class="container cart__mainContainer" id="cart__mainContainer">
             <h1 id="cart__title">Récapitulatif de votre panier</h1>
-            <section >
+            <section class="cartContent">
                 <h2 id="cartProductsQty"></h2>
                 <div class="cart__details" id="cart__details">
                     <ul class="cart__list" id="cart__list">
