--- a/pages/cart.html
+++ b/pages/cart.html
@@ -37,6 +37,9 @@
 
                     </ul>
                 </div>
+                <div class="cart__totalPrice" id="cart__totalPrice">
+                    
+                </div>
             </section>
         </main>
         <footer>
