--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="images/logo-orinoco.ico"/>
         <link rel="stylesheet" href="css/style.css"/>
         <script src="js/index.js" defer></script>
+        <script src="js/utils.js" defer></script>
     </head>
     <body>
        <header>
@@ -25,6 +26,7 @@
                    <a href="pages/cart.html">
                      <i class="cart-icon fas fa-shopping-cart"></i>
                    </a>
+                   <p class="product_nb"></p>
                 </div>
             </div>
        </header>
