Page panier : Affichage nombre d'articles dans le panier + affichage formulaire

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -32,16 +32,17 @@
         </header>
         <main class="container cart__mainContainer" id="cart__mainContainer">
             <h1 id="cart__title">Récapitulatif de votre panier</h1>
-            <section class="cartContent">
+            <section class="cartContent" id="cartContent">
                 <h2 id="cartProductsQty" class="cartProductsQty"></h2>
                 <div class="cart__details" id="cart__details">
                     <ul class="cart__list" id="cart__list">
 
                     </ul>
                 </div>
-                <div class="cart__totalPrice" id="cart__totalPrice">
-
-                </div>
+                <div class="cart__totalPrice" id="cart__totalPrice"></div>
+                <div class="cart__ctaBtn" id="cart__ctaBtn"></div>
+            </section>
+            <section class=" container formContent" id="formContent"></section>
             </section>
         </main>
         <footer>
