Page panier : apparition d'une popup au clic sur ''valider la commande'' si tous les champs du formulaire ne sont pas correctement renseignés

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -44,6 +44,12 @@
             </section>
             <section class=" container formContent" id="formContent"></section>
             </section>
+            <div class="popupContainer formPopupContainer" id="formPopupContainer">
+                <div class="popup" id="formPopup">
+                    <i class="fas fa-times closePopup_icone" id="closeFormPopup_icone"></i>
+                    <p class="popup__title bold">Veuillez remplir tous les champs correctement!</p>
+                </div>
+            </div>
         </main>
         <footer>
             <!-- Footer identique sur toutes les pages : A propos, contact et 
