PAge confirmation : affichage du prix total de la commande dans le message de remerciements/récapitulatif

--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -34,7 +34,7 @@
             <h1 class="orderConfirmation_title" id="orderConfirmation_title">Confirmation de votre commande</h1>
             <section class="oderConfirm" id="oderConfirm">
                 <h2>Merci pour votre confiance, <span id="fistNameContent"> </span><span id="lastNameContent"></span>!</h2>
-                <p>Nous avons le plaisir de vous confirmer la prise en compte de votre commande n° <span id="orderIdContent"></span> d’un montant total de 200€.
+                <p>Nous avons le plaisir de vous confirmer la prise en compte de votre commande n° <span class="bold" id="orderIdContent"></span> d’un montant total de <span id="orderPriceContent"></span>.
                 </p>
                 <p>Un email de confirmation vous a été envoyé. Nous vous tiendrons informé(e) dès l’expédition de votre commande. 
                 </p>
