--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -32,30 +32,37 @@
         </header>
         <main class="container confirm__mainContainer" id="confirm__mainContainer">
             <h1 class="orderConfirmation_title" id="orderConfirmation_title">Confirmation de votre commande</h1>
-            <section class="oderConfirm" id="oderConfirm">
+            <section class="orderConfirm" id="oderConfirm">
                 <h2>Merci pour votre confiance, <span id="fistNameContent"> </span><span id="lastNameContent"></span>!</h2>
-                <p>Nous avons le plaisir de vous confirmer la prise en compte de votre commande n° <span class="bold" id="orderIdContent"></span> d’un montant total de <span id="orderPriceContent"></span>.
+                <p>Nous avons le plaisir de vous confirmer la prise en compte de votre commande n° <span class="bold" id="orderIdContent"></span> d’un montant total de <span class="bold" id="orderPriceContent"></span>.
                 </p>
                 <p>Un email de confirmation vous a été envoyé. Nous vous tiendrons informé(e) dès l’expédition de votre commande. 
                 </p>
             </section>
             <section class="container orderDetails" id="orderDetails">
-                <h2 class="orderDetails__title">Détail<span class="underline">s de votre co</span>mmande</h2>
-                <div class="orderDetails__container">
-                    <h3>Vos articles :</h3>
-                    <div class="orderDetails__items">
-                        <ul class="orderDetails__info" id="orderDetails__info"></ul>
-                    <p class="orderDetails__totalPrice" id="orderDetails__totalPrice"></p>
+                <h2 class="orderDetails__title">Détail<span class="underline">s de votre com</span>mande</h2>
+                <div class="order__container container">
+                    <div class="orderDetails__container">
+                        <h3>Vos articles :</h3>
+                        <div class="orderDetails__items">
+                            <ul class="orderDetails__info" id="orderDetails__info"></ul>
+                        <p class="orderDetails__totalPrice bold" id="orderDetails__totalPrice"></p>
+                        </div>
+                    </div>
+                    <div class="contactDetails__container">
+                        <h3 class="contact__delivrery">Adresse de livraison :</h3>
+                        <p>
+                            <span id="contact__firstName"></span><span id="contact__lastName"></span></p>
+                        </p>
+                        <p id="contact__address"></p>
+                        <p id="contact__city"></p>
                     </div>
                 </div>
-                <div class="contactDetails__container">
-                    <h3 class="contact__delivrery">Adresse de livraison :</h3>
-                    <p>
-                        <span id="contact__firstName"></span><span id="contact__lastName"></span></p>
-                    </p>
-                    <p id="contact__address"></p>
-                    <p id="contact__city"></p>
-                </div>
+            </section>
+            <section class="endOfOrder" id="endOfOrder">
+                <a href="../index.html">
+                    <button class="cta__btn endOfOrder__btn" id="endOfOrder__btn">Retourner à l'accueil</button>
+                </a>
             </section>
         </main>
         <footer>
