--- a/pages/products.html
+++ b/pages/products.html
@@ -26,7 +26,7 @@
                     <a href="cart.html">
                         <i class="cart-icon fas fa-shopping-cart"></i>
                     </a>
-                    <p class="product_nb"></p>
+                    <p class=" bold product__nb" id="product__nb"></p>
                  </div>
              </div>
         </header>
@@ -75,7 +75,7 @@
                             <button class="popup__btn bold">Voir mon panier</button>
                         </a>
                         <a href="../index.html">
-                            <button class="popup__btn bold">Continuez mes achats</button>
+                            <button class="popup__btn bold" id="welcomeReturn">Continuez mes achats</button>
                         </a>
                     </div>
                 </div>
