--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    <a href="pages/cart.html">
                      <i class="cart-icon fas fa-shopping-cart"></i>
                    </a>
-                   <p class="product__nb" id="product__nb"></p>
+                   <p class="product__nb bold" id="product__nb"></p>
                 </div>
             </div>
        </header>
