Ajout footer sur toutes les pages

--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -68,6 +68,23 @@
         <footer>
             <!-- Footer identique sur toutes les pages : A propos, contact et 
              liens vers les autres sites Orinoco -->
+             <div><img class="footer__logo" src="../images/logo-orinoco.jpg" alt="Logo de la marque Orinoco"></div>
+             <nav>
+                 <ul class="footer__menu bold">
+                     <li>
+                         <a href="#">A propos</a>
+                     </li>
+                     <li>
+                         <a href="mailto:contact@orinoco.com">Contactez-nous</a>
+                     </li>
+                     <li>
+                         <a href="#">Mentions légales</a>
+                     </li>
+                     <li>
+                         <a href="#">Découvrez nos autres sites</a>
+                     </li>
+                 </ul>
+             </nav>
         </footer>
     </body>
 </html>
