Page confirmation : vidage du localStorage quand l'utilisateur change de page

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -60,7 +60,7 @@
                 <nav>
                     <ul class="footer__menu bold">
                         <li class="footerAbout" id="footerAbout">
-                            <p>A propos</p>
+                            <p class="about">A propos</p>
                         </li>
                         <li>
                             <a href="mailto:contact@orinoco.com">Contactez-nous</a>
