--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -19,13 +19,13 @@
              <div class="header">
                  <div class="return">
                     <a href="../index.html">
-                        <i class="return-icon fas fa-arrow-left"></i>
+                        <i class="return-icon fas fa-arrow-left" id="returnHome"></i>
                     </a>
                  </div>
                  <img class="logo" src="../images/logo-orinoco.jpg" alt="Logo de la marque Orinoco"/>
                  <div class="shopping-cart">
                     <a href="cart.html">
-                        <i class="cart-icon fas fa-shopping-cart"></i>
+                        <i class="cart-icon fas fa-shopping-cart" id="returnCart"></i>
                     </a>
                     <p class="product_nb"></p>
                  </div>
@@ -61,7 +61,7 @@
                 </div>
             </section>
             <section class="endOfOrder" id="endOfOrder">
-                <a href="../index.html">
+                <a class="linkEndOfOrder" href="../index.html">
                     <button class="cta__btn endOfOrder__btn" id="endOfOrder__btn">Retourner à l'accueil</button>
                 </a>
             </section>
@@ -74,7 +74,7 @@
                 <nav>
                     <ul class="footer__menu bold">
                         <li class="footerAbout" id="footerAbout">
-                            <p>A propos</p>
+                            <p class="about">A propos</p>
                         </li>
                         <li>
                             <a href="mailto:contact@orinoco.com">Contactez-nous</a>
