Correction vidage localStorage : ajout d'une nouvelle variable et transfert des données avant suppression LS

--- a/pages/products.html
+++ b/pages/products.html
@@ -37,7 +37,7 @@
                 <div>
                     <img class="product__img" id="product__img">
                 </div>
-                <div class="product__container">
+                <div class="product__container" id="product__container">
                     <div class="product__details">
                         <div class="product-top">
                             <h2 id="product__name" class="product__name bold">Name</h2>
